# raptorial

./: .drone.yml  .gitignore  CMakeLists.txt  Makefile.am  README  README.md  configure.ac  libraptorial.pc.in
debian/: changelog  control  copyright  watch
doc/: raptorial.ent
doc/man/man1/: rapt-parsechangelog.xml  rapt-show-versions.xml  raptorial-file.xml
doc/man/man3/: libraptorial.xml
src/lib/: aac.c  aac.h  changelog.c  contents.c  packages.c  paths.c  raptorial.h  sdfa.c  sdfa.h  util.c  util.h  versioncmp.c
src/tester/: main.c
tools/: RaptorialConfig.cmake.in  config.h.in
